--- a/assets/stylesheets/_layout/_maincontent.scss
+++ b/assets/stylesheets/_layout/_maincontent.scss
@@ -45,7 +45,7 @@
     margin-top: 10rem;
   }
   + .posts__date {
-    margin-top: 4rem;
+    margin-top: 6rem;
     @media #{$medium-up} {
       margin-top: 8rem;
     }
